small spacing fix

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .home-menu {
-    height: 100px;
+    height: auto;
     display: grid;
     grid-template-columns: 50% calc(41.8% + 2rem);
     list-style: none;
@@ -21,9 +21,9 @@
 
 @media screen and (max-width: 800px) {
     .home-menu {
-        height: 100px;
+        height: auto;
         display: grid;
-        grid-template-rows: repeat(2, auto);
+        grid-template-rows: auto auto;
         grid-template-columns: repeat(1, calc(100% - 2rem));
         width: 100%;
     }
@@ -36,7 +36,7 @@
 
     .prettyNav-grid {
         width: inherit;
-        height: 25.5vw + 4rem;
+        height: calc(100vw - 4rem);
         position: relative;
     }
 }
